--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        My Site!
+        <title>My Site!</title>
     </head>
     <body>
         <h1>This is my Github Pages Website</h1>
