--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h1>This is my Github Pages Website</h1>
+        <p style="text-align: center;">Hello,World</p>
     </body>
 </html>
